<resources>
    <string name="app_name">UTS_41281</string>

    <string name="main_app_name">SFX Library and Previewer</string>
    <string name="main_button_profile">Profile</string>
    <string name="main_button_library">Library</string>

    <string name="login_title">LOGIN PAGE</string>
    <string name="login_et_name_hint">Masukkan nama anda</string>
    <string name="login_button_next">Next</string>

    <string name="library_action_profile">Profile</string>
    <string name="library_action_logout">Keluar</string>
    <string name="library_msg_empty">No SFX found!</string>

    <string name="sfx_details_button_play">Play SFX</string>

    <string name="profile_tv_author_name">Dimas Lesmana</string>
    <string name="profile_tv_author_nim">00000041281</string>
    <string name="profile_tv_author_class">IF570-BL</string>
    <string name="profile_tv_reference_title">REFERENSI :</string>
</resources>