<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="28sp"
            android:text="@string/main_app_name" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginVertical="24dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_volume" />

        <Button
            android:id="@+id/button_main_profile"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:text="@string/main_button_profile" />

        <Button
            android:id="@+id/button_main_library"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/main_button_library" />

    </LinearLayout>

</ScrollView>