<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/teal_700"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/purple_200">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="180dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:text="@string/login_title" />

            <EditText
                android:id="@+id/et_login_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:padding="10dp"
                android:background="@color/teal_200"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textColorHighlight="@color/grey_500"
                android:inputType="text"
                android:hint="@string/login_et_name_hint" />

            <Button
                android:id="@+id/button_login_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_button_next" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>